--- a/data/bdd100k.yaml
+++ b/data/bdd100k.yaml
@@ -1,19 +1,53 @@
+classes:
+  map:
+  - person
+  - rider
+  - car
+  - bus
+  - truck
+  - bike
+  - motor
+  original:
+  - person
+  - rider
+  - car
+  - bus
+  - truck
+  - bike
+  - motor
+  - traffic light
+  - traffic sign
+  - train
+extention_names:
+  annotation:
+  - json
+  image:
+  - jpg
+  segmentation:
+  - png
+model_config_path: models/bdd100k/config.yaml
+segmentation_anno_keywords: id
+segmentation_enable: true
+segmentation_num_classes: 2
 test_dataset_path:
-  annos: [/media/eric/Data/bdd100k/annotations/val/]
-  imgs: [/media/eric/Data/bdd100k/images/val/]
-  lists: [/media/eric/Data/bdd100k/ImageSets/val.txt]
+  annos:
+  - /media/eric/Data/bdd100k/annotations/val
+  imgs:
+  - /media/eric/Data/bdd100k/images/val
+  lists:
+  - /media/eric/Data/bdd100k/ImageSets/val.txt
   lmdb: bdd100k-test-lmdb
   name: bdd100k_test
+  segs:
+  - /media/eric/Data/bdd100k/drivable_maps/labels/val/
 trainval_dataset_path:
-  annos: [/media/eric/Data/bdd100k/annotations/train/]
-  imgs: [/media/eric/Data/bdd100k/images/train/]
-  lists: [/media/eric/Data/bdd100k/ImageSets/train.txt]
+  annos:
+  - /media/eric/Data/bdd100k/annotations/train
+  imgs:
+  - /media/eric/Data/bdd100k/images/train
+  lists:
+  - /media/eric/Data/bdd100k/ImageSets/train.txt
   lmdb: bdd100k-train-lmdb
   name: bdd100k_train
-classes:
-  original: ["person","rider", "car","bus","truck","bike","motor","traffic light","traffic sign","train"]
-  map: ["person","rider", "car","bus","truck","bike","motor"]
-extention_names:
-    image: ["jpg"]
-    annotation: ["json"]
-model_config_path: "models/bdd100k/config.yaml"
+  segs:
+  - /media/eric/Data/bdd100k/drivable_maps/labels/train/
