--- a/models/bdd100k/config.yaml
+++ b/models/bdd100k/config.yaml
@@ -1,6 +1,6 @@
 img_h: 416
 img_w: 416
-batch_size: 16
+batch_size: 32
 train_img_size:
   - [416, 416]
 expand_scale: 1.3
@@ -25,3 +25,5 @@ yolo:
   mask:
   - [0, 1, 2]
   - [3, 4, 5]
+seg:
+  num_classes: 2
